Fixed overflow in section-title block

--- a/style.css
+++ b/style.css
@@ -859,6 +859,7 @@ body {
 
 .section-title {
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
   min-height: 89px;
@@ -870,6 +871,8 @@ body {
 }
 
 .section-title__text {
+  display: inline-block;
+  max-width: 60%;
   margin: 0;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -885,6 +888,7 @@ body {
 
 .section-title__button {
   width: 253px;
+  flex-shrink: 0;
 }
 
 .merchandise {
